[LayoutNG] Implement [Logical]Start/EndOfLine

This patch implements [Logical]Start/EndOfLine() for LayoutNG, so that
we can modify selection with Ctrl+Home/End on ineditable text, which is
a missing feature in LayoutNG phase 1.

The implementation uses a different approach from legacy. While legacy
heavily relies on tree traversals, this NG implementation simply
performs a hit test at the start/end of the line box. This makes the
implementation much easier than legacy.

Note: The same implementation works for both visual and logical line
boundaries, because they are the same under bidi adjustment. We'll need
another implementation for line's logical boundaries when
BidiCaretAffinity is enabled, which removes bidi adjustment.

Bug: 922407
Change-Id: I9c71714d6a0bdd1a185009470c1c51d3f6137553
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1540341
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#644996}
Former-commit-id: 69b03f8a1b6dcaa3d5b003700339a3bc1e23aca5