third_party/blink/renderer/core/editing/visible_units_line_test.cc
@@ -48,6 +48,10 @@ class VisibleUnitsLineTest : public EditingTestBase {
       TextAffinity affinity = TextAffinity::kDownstream) {
     return CreateVisiblePosition(PositionInFlatTree(&anchor, offset), affinity);
   }
+
+  static bool LayoutNGEnabled() {
+    return RuntimeEnabledFeatures::LayoutNGEnabled();
+  }
 };
 
 class ParameterizedVisibleUnitsLineTest
@@ -65,10 +69,11 @@ INSTANTIATE_TEST_SUITE_P(All,
                          ::testing::Bool());
 
 TEST_F(VisibleUnitsLineTest, endOfLine) {
-  // TODO(crbug.com/922407): This test fails with LayoutNG.
-  if (RuntimeEnabledFeatures::LayoutNGEnabled())
-    return;
-
+  // Test case:
+  // 5555522
+  // 666666
+  // 117777777
+  // 3334444
   const char* body_content =
       "<a id=host><b id=one>11</b><b id=two>22</b></a><i id=three>333</i><i "
       "id=four>4444</i><br>";
@@ -108,17 +113,17 @@ TEST_F(VisibleUnitsLineTest, endOfLine) {
       PositionInFlatTree(two, 2),
       EndOfLine(CreateVisiblePositionInFlatTree(*two, 0)).DeepEquivalent());
 
-  // TODO(yosin) endOfLine(two, 1) -> (five, 5) is a broken result. We keep
-  // it as a marker for future change.
   EXPECT_EQ(
-      Position(five, 5),
+      // The result on legacy layout is broken and not worth fixing.
+      LayoutNGEnabled() ? Position(two, 2) : Position(five, 5),
       EndOfLine(CreateVisiblePositionInDOMTree(*two, 1)).DeepEquivalent());
   EXPECT_EQ(
       PositionInFlatTree(two, 2),
       EndOfLine(CreateVisiblePositionInFlatTree(*two, 1)).DeepEquivalent());
 
   EXPECT_EQ(
-      Position(five, 5),
+      // The result on legacy layout is broken and not worth fixing.
+      LayoutNGEnabled() ? Position(two, 2) : Position(five, 5),
       EndOfLine(CreateVisiblePositionInDOMTree(*three, 0)).DeepEquivalent());
   EXPECT_EQ(
       PositionInFlatTree(four, 4),
@@ -132,7 +137,8 @@ TEST_F(VisibleUnitsLineTest, endOfLine) {
       EndOfLine(CreateVisiblePositionInFlatTree(*four, 1)).DeepEquivalent());
 
   EXPECT_EQ(
-      Position(five, 5),
+      // The result on legacy layout is broken and not worth fixing.
+      LayoutNGEnabled() ? Position(two, 2) : Position(five, 5),
       EndOfLine(CreateVisiblePositionInDOMTree(*five, 1)).DeepEquivalent());
   EXPECT_EQ(
       PositionInFlatTree(two, 2),
@@ -154,10 +160,11 @@ TEST_F(VisibleUnitsLineTest, endOfLine) {
 }
 
 TEST_F(VisibleUnitsLineTest, isEndOfLine) {
-  // TODO(crbug.com/922407): This test fails with LayoutNG.
-  if (RuntimeEnabledFeatures::LayoutNGEnabled())
-    return;
-
+  // Test case:
+  // 5555522
+  // 666666
+  // 117777777
+  // 3334444
   const char* body_content =
       "<a id=host><b id=one>11</b><b id=two>22</b></a><i id=three>333</i><i "
       "id=four>4444</i><br>";
@@ -182,7 +189,11 @@ TEST_F(VisibleUnitsLineTest, isEndOfLine) {
   EXPECT_FALSE(IsEndOfLine(CreateVisiblePositionInDOMTree(*one, 1)));
   EXPECT_FALSE(IsEndOfLine(CreateVisiblePositionInFlatTree(*one, 1)));
 
-  EXPECT_FALSE(IsEndOfLine(CreateVisiblePositionInDOMTree(*two, 2)));
+  // The result on legacy layout is broken and not worth fixing.
+  if (LayoutNGEnabled())
+    EXPECT_TRUE(IsEndOfLine(CreateVisiblePositionInFlatTree(*two, 2)));
+  else
+    EXPECT_FALSE(IsEndOfLine(CreateVisiblePositionInDOMTree(*two, 2)));
   EXPECT_TRUE(IsEndOfLine(CreateVisiblePositionInFlatTree(*two, 2)));
 
   EXPECT_FALSE(IsEndOfLine(CreateVisiblePositionInDOMTree(*three, 3)));
@@ -191,7 +202,11 @@ TEST_F(VisibleUnitsLineTest, isEndOfLine) {
   EXPECT_TRUE(IsEndOfLine(CreateVisiblePositionInDOMTree(*four, 4)));
   EXPECT_TRUE(IsEndOfLine(CreateVisiblePositionInFlatTree(*four, 4)));
 
-  EXPECT_TRUE(IsEndOfLine(CreateVisiblePositionInDOMTree(*five, 5)));
+  // The result on legacy layout is broken and not worth fixing.
+  if (LayoutNGEnabled())
+    EXPECT_FALSE(IsEndOfLine(CreateVisiblePositionInFlatTree(*five, 5)));
+  else
+    EXPECT_TRUE(IsEndOfLine(CreateVisiblePositionInDOMTree(*five, 5)));
   EXPECT_FALSE(IsEndOfLine(CreateVisiblePositionInFlatTree(*five, 5)));
 
   EXPECT_TRUE(IsEndOfLine(CreateVisiblePositionInDOMTree(*six, 6)));
@@ -202,10 +217,11 @@ TEST_F(VisibleUnitsLineTest, isEndOfLine) {
 }
 
 TEST_F(VisibleUnitsLineTest, isLogicalEndOfLine) {
-  // TODO(crbug.com/922407): This test fails with LayoutNG.
-  if (RuntimeEnabledFeatures::LayoutNGEnabled())
-    return;
-
+  // Test case:
+  // 5555522
+  // 666666
+  // 117777777
+  // 3334444
   const char* body_content =
       "<a id=host><b id=one>11</b><b id=two>22</b></a><i id=three>333</i><i "
       "id=four>4444</i><br>";
@@ -230,7 +246,11 @@ TEST_F(VisibleUnitsLineTest, isLogicalEndOfLine) {
   EXPECT_FALSE(IsLogicalEndOfLine(CreateVisiblePositionInDOMTree(*one, 1)));
   EXPECT_FALSE(IsLogicalEndOfLine(CreateVisiblePositionInFlatTree(*one, 1)));
 
-  EXPECT_FALSE(IsLogicalEndOfLine(CreateVisiblePositionInDOMTree(*two, 2)));
+  // The result in legacy layout is broken and not worth fixing.
+  if (LayoutNGEnabled())
+    EXPECT_TRUE(IsLogicalEndOfLine(CreateVisiblePositionInDOMTree(*two, 2)));
+  else
+    EXPECT_FALSE(IsLogicalEndOfLine(CreateVisiblePositionInDOMTree(*two, 2)));
   EXPECT_TRUE(IsLogicalEndOfLine(CreateVisiblePositionInFlatTree(*two, 2)));
 
   EXPECT_FALSE(IsLogicalEndOfLine(CreateVisiblePositionInDOMTree(*three, 3)));
@@ -239,7 +259,11 @@ TEST_F(VisibleUnitsLineTest, isLogicalEndOfLine) {
   EXPECT_TRUE(IsLogicalEndOfLine(CreateVisiblePositionInDOMTree(*four, 4)));
   EXPECT_TRUE(IsLogicalEndOfLine(CreateVisiblePositionInFlatTree(*four, 4)));
 
-  EXPECT_TRUE(IsLogicalEndOfLine(CreateVisiblePositionInDOMTree(*five, 5)));
+  // The result in legacy layout is broken and not worth fixing.
+  if (LayoutNGEnabled())
+    EXPECT_FALSE(IsLogicalEndOfLine(CreateVisiblePositionInDOMTree(*five, 5)));
+  else
+    EXPECT_TRUE(IsLogicalEndOfLine(CreateVisiblePositionInDOMTree(*five, 5)));
   EXPECT_FALSE(IsLogicalEndOfLine(CreateVisiblePositionInFlatTree(*five, 5)));
 
   EXPECT_TRUE(IsLogicalEndOfLine(CreateVisiblePositionInDOMTree(*six, 6)));
@@ -314,10 +338,6 @@ TEST_P(ParameterizedVisibleUnitsLineTest, inSameLine) {
 }
 
 TEST_F(VisibleUnitsLineTest, isStartOfLine) {
-  // TODO(crbug.com/922407): This test fails with LayoutNG.
-  if (RuntimeEnabledFeatures::LayoutNGEnabled())
-    return;
-
   const char* body_content =
       "<a id=host><b id=one>11</b><b id=two>22</b></a><i id=three>333</i><i "
       "id=four>4444</i><br>";
@@ -362,10 +382,11 @@ TEST_F(VisibleUnitsLineTest, isStartOfLine) {
 }
 
 TEST_F(VisibleUnitsLineTest, logicalEndOfLine) {
-  // TODO(crbug.com/922407): This test fails with LayoutNG.
-  if (RuntimeEnabledFeatures::LayoutNGEnabled())
-    return;
-
+  // Test case:
+  // 5555522
+  // 666666
+  // 117777777
+  // 3334444
   const char* body_content =
       "<a id=host><b id=one>11</b><b id=two>22</b></a><i id=three>333</i><i "
       "id=four>4444</i><br>";
@@ -405,16 +426,17 @@ TEST_F(VisibleUnitsLineTest, logicalEndOfLine) {
             LogicalEndOfLine(CreateVisiblePositionInFlatTree(*two, 0))
                 .DeepEquivalent());
 
-  // TODO(yosin) logicalEndOfLine(two, 1) -> (five, 5) is a broken result. We
-  // keep it as a marker for future change.
-  EXPECT_EQ(Position(five, 5),
+  // The result on legacy layout is broken and not worth fixing.
+  EXPECT_EQ(LayoutNGEnabled() ? Position(two, 2) : Position(five, 5),
             LogicalEndOfLine(CreateVisiblePositionInDOMTree(*two, 1))
                 .DeepEquivalent());
   EXPECT_EQ(PositionInFlatTree(two, 2),
             LogicalEndOfLine(CreateVisiblePositionInFlatTree(*two, 1))
                 .DeepEquivalent());
 
-  EXPECT_EQ(Position(five, 5),
+  // DOM VisiblePosition canonicalization moves input position to (two, 2),
+  // which yields wrong results in both legacy layout and LayoutNG.
+  EXPECT_EQ(LayoutNGEnabled() ? Position(two, 2) : Position(five, 5),
             LogicalEndOfLine(CreateVisiblePositionInDOMTree(*three, 0))
                 .DeepEquivalent());
   EXPECT_EQ(PositionInFlatTree(four, 4),
@@ -428,7 +450,8 @@ TEST_F(VisibleUnitsLineTest, logicalEndOfLine) {
             LogicalEndOfLine(CreateVisiblePositionInFlatTree(*four, 1))
                 .DeepEquivalent());
 
-  EXPECT_EQ(Position(five, 5),
+  // The result on legacy layout is broken and not worth fixing.
+  EXPECT_EQ(LayoutNGEnabled() ? Position(two, 2) : Position(five, 5),
             LogicalEndOfLine(CreateVisiblePositionInDOMTree(*five, 1))
                 .DeepEquivalent());
   EXPECT_EQ(PositionInFlatTree(two, 2),
@@ -451,10 +474,6 @@ TEST_F(VisibleUnitsLineTest, logicalEndOfLine) {
 }
 
 TEST_F(VisibleUnitsLineTest, logicalStartOfLine) {
-  // TODO(crbug.com/922407): This test fails with LayoutNG.
-  if (RuntimeEnabledFeatures::LayoutNGEnabled())
-    return;
-
   const char* body_content =
       "<a id=host><b id=one>11</b><b id=two>22</b></a><i id=three>333</i><i "
       "id=four>4444</i><br>";
@@ -540,10 +559,11 @@ TEST_F(VisibleUnitsLineTest, logicalStartOfLine) {
 }
 
 TEST_F(VisibleUnitsLineTest, startOfLine) {
-  // TODO(crbug.com/922407): This test fails with LayoutNG.
-  if (RuntimeEnabledFeatures::LayoutNGEnabled())
-    return;
-
+  // Test case:
+  // 5555522
+  // 666666
+  // 117777777
+  // 3334444
   const char* body_content =
       "<a id=host><b id=one>11</b><b id=two>22</b></a><i id=three>333</i><i "
       "id=four>4444</i><br>";
